--- a/_posts/Android/2015-04-18-dummy.md
+++ b/_posts/Android/2015-04-18-dummy.md
@@ -1,9 +1,9 @@
 ---
-layout: post
+layout: article
 title:  "Dummy Post"
 date:   2015-04-18 08:43:59
 author: Ben Centra
-categories: Dummy
+categories: android
 ---
 
 This is just a dummy post. Lorem ipsum and all the rest.
