--- a/_posts/Android/2015-04-18-dummy.md
+++ b/_posts/Android/2015-04-18-dummy.md
@@ -2,8 +2,9 @@
 layout: article
 title:  "Dummy Post"
 date:   2015-04-18 08:43:59
-author: Ben Centra
+author: Shuiming Chen
 categories: android
+comments: true
 ---
 
 This is just a dummy post. Lorem ipsum and all the rest.
